fix alignment

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,7 @@ font-family: 'Raleway', sans-serif;
 
 .bg-wrapper{
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background-color: black;
     display: flex;
     justify-content: center;
@@ -24,7 +24,7 @@ font-family: 'Raleway', sans-serif;
 .h-intro img{
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     object-fit: cover;
 }
 
@@ -32,10 +32,11 @@ font-family: 'Raleway', sans-serif;
     position: absolute;
     z-index: 1;
     bottom: 0;
+    padding-bottom: 10vh;
+    padding-right: 50px;
     display: flex;
     flex-direction: column;
     align-items: end;
-    padding-right: 50px
 }
 
 .company-name h1{
@@ -50,38 +51,46 @@ font-family: 'Raleway', sans-serif;
 
 /*----------------------------  Button --------------------------*/
 
+.h-button-wrapper{
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
 .p-button{
     border-radius: 50px;
-    padding: 15px;
-    padding-inline: 30px;
+    padding: 25px;
+    padding-inline: 60px;
     border: none;
     background-color: #3B3B3B;
     color: white;
-    float: right;
     margin-right: 5vw;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    font-size: 20px;
 }
 
 /*---------------------------  Practices ------------------------*/
 
 .h-practices .p-title{
     margin-left: 10vw;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: 3rem;
 }
 
 .h-practices{
-    height: 90vh;
+    height: 80vh;
 }
 
 .h-practices .box{
-    height: 400px;
-    width: 400px;
+    height: 60%;
+    width: 28%;
     display: inline-block;
     color: white;
 }
 
 .h-practices .box-wrapper{
-    height: 85vh;
+    height: 80vh;
     width: 100vw;
     display: flex;
     justify-content: end;
@@ -100,12 +109,15 @@ font-family: 'Raleway', sans-serif;
     background-color: #000000;
 }
 
-.practice-title{
-    font-size: 30px;
+.h-practices .box .practice-title{
+    font-size: 2.5rem;
     margin-top: 60px;
     margin-bottom: 80px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .h-practices .box p{
     margin-inline: 40px;
+    font-size: 1.5rem;
+    font-family: 'Raleway', sans-serif;
 }
